<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    app:cardCornerRadius="25dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="250dp"
            android:layout_height="200dp"
            tools:src="@mipmap/ic_banana"
            android:background="@color/colorPrimary"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextQuantity"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/quantity"
            app:layout_constraintTop_toBottomOf="@id/imgProduct"
            app:layout_constraintStart_toStartOf="@id/imgProduct"
            app:layout_constraintEnd_toEndOf="@id/imgProduct"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textUnitMeasurement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_kg"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/editTextQuantity"
            app:layout_constraintBottom_toBottomOf="@id/editTextQuantity"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:text="R$ --"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/editTextQuantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnAddProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/add"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/textValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>